--- a/recipes/german-chocolate-cake.html
+++ b/recipes/german-chocolate-cake.html
@@ -7,5 +7,55 @@
 
     <body>
         <h1>German Choclate Cake</h1>
+        <img src="../images/German-Chocolate-Cake-Main-Photo-735x827.jpg" alt="German Chocolate Cake">
+        <h2>Description</h2>
+        <p>A delicious chocolate cake that is incredibly easy to make and requires
+            very few ingredients.
+        </p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 Cups Sugar</li>
+            <li>1 3/4 Cups All Purpose Flour</li>
+            <li>3/4 Cup Cocoa Powder</li>
+            <li>1 1/2 Tsp Baking Powder</li>
+            <li>1 1/2 Tsp Baking Soda</li>
+            <li>1 Tsp Salt</li>
+            <li>3 Large Eggs</li>
+            <li>1 Cup Buttermilk</li>
+            <li>1/2 Cup Vegetable Oil</li>
+            <li>2 Tsp Vanilla Extract</li>
+            <li>1 Cup Water</li>
+            <li>Coconut Frosting</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ul>
+            <li>
+                <p>Heat oven to 375&deg;, grease two 9" cake pans with cooking spray
+                    or vegetable oil, and begin to boil water.
+                </p>
+            </li>
+            <li>
+                <p>Whisk together sugar, flour, cocoa powder, baking soda, baking powder, and salt
+                    in a bowl.
+                </p>
+            </li>
+            <li>
+                <p>In a seperate bowl mix together eggs, buttermilk, vegetable oil, and vanilla extract.</p>
+            </li>
+            <li>
+                <p>Pour wet ingredients into dry ingredients and stir until well combined. Once combined
+                    add boiled water to mixture and continue stiring until well incorperated.
+                </p>
+            </li>
+            <li>Pour batter evenly into greased cake pans and bake 25-30 minutes or until a toothpick comes
+                out of the center with a few crumbs. Allow cakes to cool for a few minutes before transfering to
+                a wire rack to finish cooling.
+            </li>
+            <li>
+                <p>Once completely cooled frost and enjoy!</p>
+            </li>
+        </ul>
     </body>
 </html>
