--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/german-chocolate-cake.html">German Choclate Cake</a>
+        <a href="recipes/apple-pie.html">Apple Pie</a>
+        <a href="recipes/chocolate-peanutbutter-brownies.html">Chocolate Peanut Butter Brownies</a>
     </body>
 </html>
