--- a/recipes/chocolate-peanutbutter-brownies.html
+++ b/recipes/chocolate-peanutbutter-brownies.html
@@ -7,5 +7,55 @@
 
     <body>
         <h1>Chocolate Peanut Butter Brownies</h1>
+        <img src="../images/brownies.jpg" alt="Choclate Peanut Butter Brownie">
+        <h2>Description</h2>
+        <p>Chocolate brownies mixed with lots of peanut butter with a rich and creamy chocolate and peanut butter swirl
+            on top.
+        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1/2 Cup Unsweetend Cocoa Powder</li>
+            <li>1/2 Cup Powdered Sugar</li>
+            <li>3/4 Cup All Purpose Flour</li>
+            <li>1/2 Tsp Salt</li>
+            <li>1/2 Cup Unsalted Butter (Melted)</li>
+            <li>1 Cup Sugar</li>
+            <li>2 Eggs</li>
+            <li>1 Tbsp Water</li>
+            <li>2 Tsp Vanilla Extract</li>
+            <li>1/3 Cup Chocolate Chips</li>
+            <li>2/3 Cup Peanut Butter Chips</li>
+            <li>Mini Recees Peanut Butter Cups</li>
+            <li>1/3 Cup Creamy Peanut Butter</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ul>
+            <li>Preheat oven to 350&deg; and line a 9"x13" baking pan with foil. Spray
+                foil with cooking spray. </li>
+            <li>In a bowl whisk together cocoa powder, sugar, flour and salt.</li>
+            <li>In a seperate bowl mix together butter and sugar. Allow mixture to sit at
+                room temp for ~5 minutes. After 5 minutes add eggs, vanilla extract and water.
+            </li>
+            <li>Pour wet ingredients into dry ingredients and stir together with a rubber
+                spatula.
+            </li>
+            <li>Set aside ~1/3 cup of brownie batter for topping. Fold peanut butter cups and chocolate
+                chips into the remaining batter. Pour mixture into greased pan.
+            </li>
+            <li>Using a tablespoon take a spoonful of brownie batter, that was set aside,
+                and place on top of brownies in pan. Take a spoonful of creamy peanut butter and
+                place that on top of the brownies as well. Repeat unitl brownie batter reserves and
+                peanut butter are gone.
+            </li>
+            <li>Using a sharp knife carve various figure eight patterns over the top of the brownies
+                to mix together the peanut butter and brownie batter on top.
+            </li>
+            <li>Bake 25-30 minutes or until a toothpick comes out of the center mostly clean, no batter
+                just fudgy crumbs.
+            </li>
+            <li>Remove foil from pan and allow brownies to cool on a wire rack. </li>
+
+        </ul>
     </body>
 </html>
