Fill out apple pie recipe
Added information for the apple pie recipe to match the format of the
previous two recipes.

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -2,10 +2,39 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>Apple Pie</title>
+        <title>Apple Pie Recipe</title>
     </head>
 
     <body>
         <h1>Apple Pie</h1>
+        <img src="../images/apple-pie.jpg" alt="Apple Pie">
+        <h2>Description</h2>
+        <p>Its an apple pie. Pie with apples in it. Apple pie.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 Package Premade Pie Crusts</li>
+            <li>6 Cups Thin Sliced, Peeled Apples</li>
+            <li>3/4 Cup Sugar</li>
+            <li>2 Tbsp All Purpose Flour</li>
+            <li>3/4 Tsp Ground Cinnamon</li>
+            <li>1/4 Tsp Salt</li>
+            <li>1/8 Tsp Ground Nutmeg</li>
+            <li>1 Tbsp Lemon Juice</li>
+        </ul>
+        <h2>Steps</h2>
+        <ul>
+            <li>Heat oven to 425 &deg;. Place 1 pie crust in an ungreased 9" glass pie plate. Press firmly
+                against the sides and bottm.
+            </li>
+            <li>In a large bowl mix together apples, sugar, flour, cinnamon, salt, nutmeg,
+                and lemon juice. Spoon mixture into the lined glass pie plate. top with the
+                second crust. Wrap excess top crust under the bottom crust edge, pressing edges together to seal; flute.
+                Cut slits into the top crust.
+            </li>
+            <li>Bake 40-45 minutes or until apples are tender and crust is golden brown.
+                Cover the edge of the crust with strips of foil after the first 15-20 minutes 
+                of baking to prevent excessive browning. Cool on a wire rack before serving.
+            </li>
+        </ul>
     </body>
 </html>
